INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
file(GLOB PROTO_FILES "*.proto")
message(STATUS "Found .proto files:")
foreach(proto_file ${PROTO_FILES})
    message(STATUS "  - ${proto_file}")
endforeach()
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HEADERS ${PROTO_FILES})
ADD_LIBRARY(proto ${PROTO_HEADERS} ${PROTO_SRCS})